Move WinUI bootstrap to native app host